// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-functions basic 1`] = `Array []`;

exports[`arrow-functions default-parameters 1`] = `Array []`;

exports[`arrow-functions expression 1`] = `Array []`;

exports[`arrow-functions nested 1`] = `Array []`;

exports[`arrow-functions paran-insertion 1`] = `Array []`;

exports[`arrow-functions spec-naming 1`] = `Array []`;

exports[`modules-commonjs interop export-default-ae 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;

      // ae = array expression
      var a = function() {};

      var b = function() {};

      var _default = [a, b];

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-ce 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      // ce = call expression

      var _default = function() {
        return \\"a\\";
      }();

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-fd 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      // fd = function declaration

      function _default(a) {
        return a;
      }

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-fd-id-name 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      // fd-id-name = function declaration && id.name exists

      function a(a) {
        return a;
      }

      exports.default = a;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-literal 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      var _default = 1;

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-ne 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;

      // ne = new expression
      function A() {
        this.a = \\"a\\";
      }

      var _default = new A();

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-default-oe 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      // oe = object expression
      var a, b;
      var _default = {
        a: a,
        b: b,
        k: function k() {}
      };

      exports.default = _default;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-all 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });

      var _a = require(\\"./a.js\\");

      Object.keys(_a).forEach(function(key) {
        if (key === \\"default\\" || key === \\"__esModule\\") return;
        Object.defineProperty(exports, key, {
          enumerable: true,
          get: function() {
            return _a[key];
          }
        });
      });
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b, c;
      module.exports = {
        b,
        c
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-as 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"c\\", {
        enumerable: true,
        get: function() {
          return _a.b;
        }
      });

      var _a = require(\\"./a.js\\");
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = {
        b
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-as-default 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"default\\", {
        enumerable: true,
        get: function() {
          return _a.b;
        }
      });

      var _a = require(\\"./a.js\\");
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = {
        b
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-as-mix 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"default\\", {
        enumerable: true,
        get: function() {
          return _a.b;
        }
      });
      Object.defineProperty(exports, \\"c\\", {
        enumerable: true,
        get: function() {
          return _a.c;
        }
      });

      var _a = require(\\"./a.js\\");
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b, c;
      module.exports = {
        b,
        c
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-default-as 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"c\\", {
        enumerable: true,
        get: function() {
          return _a.default;
        }
      });

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = {
        default: b
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-named 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"b\\", {
        enumerable: true,
        get: function() {
          return _a.b;
        }
      });

      var _a = require(\\"./a.js\\");
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      exports.b = function() {};
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-from-named-multi 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      Object.defineProperty(exports, \\"b\\", {
        enumerable: true,
        get: function() {
          return _a.b;
        }
      });
      Object.defineProperty(exports, \\"c\\", {
        enumerable: true,
        get: function() {
          return _a.c;
        }
      });

      var _a = require(\\"./a.js\\");
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b, c;
      module.exports = {
        b,
        c
      };
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-hoist-function-failure 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.hoist = hoist;
      exports.not_hoist_1 = exports.not_hoist_2 = void 0;
      hoist();

      function hoist() {
        return null;
      }

      var not_hoist_1 = function not_hoist_1() {
        not_hoist_2();
      };

      // Error

      exports.not_hoist_1 = not_hoist_1;

      not_hoist_1();

      var not_hoist_2 = function not_hoist_2() {
        return null;
      };

      exports.not_hoist_2 = not_hoist_2;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-hoist-function-success 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.hoist = hoist;
      exports.not_hoist_1 = void 0;
      // Function Declaration should be hoisted

      function hoist() {
        return null;
      }

      // Function Expression is not hoisted

      var not_hoist_1 = function not_hoist_1() {
        return null;
      };

      exports.not_hoist_1 = not_hoist_1;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.a = void 0;
      var a;
      exports.a = a;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named-as 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.b = void 0;
      var a;
      exports.b = a;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named-as-default 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = void 0;
      var a;
      exports.default = a;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named-as-mix 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.default = exports.b = void 0;
      var a, b;
      exports.default = a;
      exports.b = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named-multi 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.a = exports.b = void 0;
      var a, b;
      exports.a = a;
      exports.b = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-named-remap 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.b = exports.c = void 0;
      var a;
      exports.b = a;
      exports.c = a;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-rename-hoist 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.exports = _exports;
      exports.module = _module;
      exports.require = _require;
      exports.__filename = _filename;
      exports.__dirname = _dirname;

      // Rename for reserved words
      function _exports() {}

      function _module() {}

      function _require() {}

      function _filename() {}

      function _dirname() {}
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-rename-not-hoist 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.exports = exports.module = exports.require = exports.__filename = exports.__dirname = void 0;

      // Rename for reserved words
      var _exports = function exports() {};

      exports.exports = _exports;

      var _module = function module() {};

      exports.module = _module;

      var _require = function require() {};

      exports.require = _require;

      var _filename = function __filename() {};

      exports.__filename = _filename;

      var _dirname = function __dirname() {};

      exports.__dirname = _dirname;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop export-variables 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      Object.defineProperty(exports, \\"__esModule\\", {
        value: true
      });
      exports.i = i;
      exports.a = exports.b = exports.d = exports.e = exports.f = exports.g = exports.h = exports.j = void 0;
      var a = 1;

      exports.a = a;

      var b = 1;

      exports.b = b;

      var d = function() {};

      exports.d = d;

      var e;

      exports.e = e;

      var f = 2;

      exports.f = f;

      var g;

      exports.g = g;

      var h = 3;

      exports.h = h;

      function i() {}

      class j {}

      exports.j = j;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-as-mix 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireWildcard(require(\\"./a.js\\"));

      function _getRequireWildcardCache() {
        if (typeof WeakMap !== \\"function\\") return null;
        var cache = new WeakMap();

        _getRequireWildcardCache = function() {
          return cache;
        };

        return cache;
      }

      function _interopRequireWildcard(obj) {
        if (obj && obj.__esModule) {
          return obj;
        }

        if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") {
          return {
            default: obj
          };
        }

        var cache = _getRequireWildcardCache();

        if (cache && cache.has(obj)) {
          return cache.get(obj);
        }

        var newObj = {};
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;

        for (var key in obj) {
          if (Object.prototype.hasOwnProperty.call(obj, key)) {
            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;

            if (desc && (desc.get || desc.set)) {
              Object.defineProperty(newObj, key, desc);
            } else {
              newObj[key] = obj[key];
            }
          }
        }

        newObj.default = obj;

        if (cache) {
          cache.set(obj, newObj);
        }

        return newObj;
      }

      _a.default;
      _a.b;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b, c;
      exports.b = b;
      module.exports = c;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-basic 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      require(\\"./src/a.js\\");
    },
    {
      \\"./src/a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      exports.b = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-default-as 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      _a.default;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-default-literal 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      _a.default;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-global-variable-unbind 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      function d(n) {
        (0, _a.b)(n, 1);
      }

      (0, _a.c)();
      _a.c;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      function b(n, m) {
        return n * m;
      }

      function c() {}

      exports.b = b;
      exports.c = c;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-hoist 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      var _b = require(\\"./b.js\\");

      (0, _a.a1)(1, 10);
      (0, _b.b1)(1, 10);
    },
    {
      \\"./a.js\\": 1,
      \\"./b.js\\": 2
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      function a1(n, m) {
        return n * m;
      }

      exports.a1 = a1;
    },
    {},
  ],
  2: [
    function(require, module, exports) {
      \\"use strict\\";

      function b1(n, m) {
        return n * m;
      }

      exports.b1 = b1;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-named 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      _a.b;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      exports.b = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-named-as-mix 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      _a.c;
      _a.b;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-named-multi 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      _a.b;
      _a.c;
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b, c;
      exports.b = b;
      exports.c = c;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-wildcard-as 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var d = _interopRequireWildcard(require(\\"./a.js\\"));

      function _getRequireWildcardCache() {
        if (typeof WeakMap !== \\"function\\") return null;
        var cache = new WeakMap();

        _getRequireWildcardCache = function() {
          return cache;
        };

        return cache;
      }

      function _interopRequireWildcard(obj) {
        if (obj && obj.__esModule) {
          return obj;
        }

        if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") {
          return {
            default: obj
          };
        }

        var cache = _getRequireWildcardCache();

        if (cache && cache.has(obj)) {
          return cache.get(obj);
        }

        var newObj = {};
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;

        for (var key in obj) {
          if (Object.prototype.hasOwnProperty.call(obj, key)) {
            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;

            if (desc && (desc.get || desc.set)) {
              Object.defineProperty(newObj, key, desc);
            } else {
              newObj[key] = obj[key];
            }
          }
        }

        newObj.default = obj;

        if (cache) {
          cache.set(obj, newObj);
        }

        return newObj;
      }

      d;
      d.b;
      d.b();
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      function b() {}

      function c() {}

      exports.b = b;
      exports.c = c;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs interop import-wildcard-as-hoist 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var d = _interopRequireWildcard(require(\\"./a.js\\"));

      function _getRequireWildcardCache() {
        if (typeof WeakMap !== \\"function\\") return null;
        var cache = new WeakMap();

        _getRequireWildcardCache = function() {
          return cache;
        };

        return cache;
      }

      function _interopRequireWildcard(obj) {
        if (obj && obj.__esModule) {
          return obj;
        }

        if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") {
          return {
            default: obj
          };
        }

        var cache = _getRequireWildcardCache();

        if (cache && cache.has(obj)) {
          return cache.get(obj);
        }

        var newObj = {};
        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;

        for (var key in obj) {
          if (Object.prototype.hasOwnProperty.call(obj, key)) {
            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;

            if (desc && (desc.get || desc.set)) {
              Object.defineProperty(newObj, key, desc);
            } else {
              newObj[key] = obj[key];
            }
          }
        }

        newObj.default = obj;

        if (cache) {
          cache.set(obj, newObj);
        }

        return newObj;
      }

      d;
      d.b;
      d.b();
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      function b() {}

      function c() {}

      exports.b = b;
      exports.c = c;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc this-computed-class-method-wrap-func 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      class A {
        [function() {
          this.a;
        }]() {}

      }
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc undefined-this-root-declaration 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var self = void 0;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc undefined-this-root-reference 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      void 0;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) import-global-variable-throw-ae 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      // ae = array expressiohn
      [b] = ([1, 2], function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }());
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) import-global-variable-throw-bs 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      ({
        b
      } = ({
        u: 1,
        t: 2
      }, function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }()));
      [b] = ([1, 2], function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }());
      b = (1, function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }());
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) import-global-variable-throw-bs-ls 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      // bs = block statement
      // ls = labeled statement
      ({
        prop: b
      } = ({
        u: 1,
        t: 2
      }, function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }()));
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) import-global-variable-throw-id 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = _interopRequireDefault(require(\\"./a.js\\"));

      function _interopRequireDefault(obj) {
        return obj && obj.__esModule ? obj : {
          default: obj
        };
      }

      // id = identifier
      b = (1, function() {
        throw new Error('\\"' + \\"b\\" + '\\" is read-only.');
      }());
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      var b;
      module.exports = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) undefined-this-computed-class-method 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      class A {
        [(void 0).a]() {}

      }
    },
    {},
  ]
})"
`;

exports[`modules-commonjs misc(throw error) undefined-this-root-call 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      (void 0).a = {};
    },
    {},
  ]
})"
`;

exports[`modules-commonjs noInterop import-default 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var _a = require(\\"./a.js\\");

      (0, _a.default)();
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      function b() {}

      ;
      exports.default = b;
    },
    {},
  ]
})"
`;

exports[`modules-commonjs noInterop import-wildcard 1`] = `
"(function(modules) {
  function require(id) {
    const [fn, mapping] = modules[id];

    function localRequire(name) {
      return require(mapping[name]);
    }

    const module = {
      exports: {}
    };

    fn(localRequire, module, module.exports);

    return module.exports;
  }

  require(0)
})({
  0: [
    function(require, module, exports) {
      \\"use strict\\";

      var d = require(\\"./a.js\\");

      d.b();
      d.c();
    },
    {
      \\"./a.js\\": 1
    },
  ],
  1: [
    function(require, module, exports) {
      \\"use strict\\";

      exports.b = function b() {};

      exports.c = function c() {};
    },
    {},
  ]
})"
`;
